syntax = "proto3";

package devhive.v1;

option go_package = "devhive-backend/api/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Project service definition
service ProjectService {
  rpc GetProject(GetProjectRequest) returns (Project);
  rpc CreateProject(CreateProjectRequest) returns (Project);
  rpc UpdateProject(UpdateProjectRequest) returns (Project);
  rpc DeleteProject(DeleteProjectRequest) returns (google.protobuf.Empty);
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse);
  rpc AddMember(AddMemberRequest) returns (google.protobuf.Empty);
  rpc RemoveMember(RemoveMemberRequest) returns (google.protobuf.Empty);
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse);
}

// Project message
message Project {
  string id = 1;
  string owner_id = 2;
  string name = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// Project member message
message ProjectMember {
  string project_id = 1;
  string user_id = 2;
  string role = 3;
  google.protobuf.Timestamp joined_at = 4;
}

// Request messages
message GetProjectRequest {
  string id = 1;
}

message CreateProjectRequest {
  string name = 1;
  string description = 2;
}

message UpdateProjectRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

message DeleteProjectRequest {
  string id = 1;
}

message ListProjectsRequest {
  int32 limit = 1;
  int32 offset = 2;
  string search = 3;
}

message ListProjectsResponse {
  repeated Project projects = 1;
  int32 total = 2;
}

message AddMemberRequest {
  string project_id = 1;
  string user_id = 2;
  string role = 3;
}

message RemoveMemberRequest {
  string project_id = 1;
  string user_id = 2;
}

message ListMembersRequest {
  string project_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListMembersResponse {
  repeated ProjectMember members = 1;
  int32 total = 2;
}
